--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -10,16 +10,14 @@
     <div class="inner">
 
         <header>
-            <h2>TWENTY</h2>
+            <h2>Daniella Roberts</h2>
         </header>
-        <p>This is <strong>Twenty</strong>, a free
+        <p> <strong>Lupy</strong>
         <br />
-        responsive template
-        <br />
-        by <a href="http://html5up.net">HTML5 UP</a>.</p>
+        I own 2 guinea pigs: Deacon and Comet
         <footer>
             <ul class="buttons vertical">
-                <li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
+                <li><a href="#main" class="button fit scrolly">About me</a></li>
             </ul>
         </footer>
 
