--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -12,6 +12,14 @@
         <header>
             <h2>Daniella Roberts</h2>
         </header>
+        
+        <!-- Main -->
+        <header>
+            <span class="avatar"><img src="images/pic01.jpg" alt="" /></span>
+            <h1>Jane Doe</h1>
+            <p>Senior Psychonautics Engineer</p>
+        </header>
+        
         <p> <strong>Lupy</strong>
         <br />
         I own 2 guinea pigs: Deacon and Comet
