Added Avatar to banner

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -13,12 +13,16 @@
             <h2>Daniella Roberts</h2>
         </header>
         
-        <!-- Main -->
+        <br />
+       
+        <!-- Avatar -->
         <header>
             <span class="avatar"><img src="images/pic01.jpg" alt="" /></span>
-            <h1>Jane Doe</h1>
-            <p>Senior Psychonautics Engineer</p>
+            <!-- <h1>Jane Doe</h1> -->
+            <p>Physics Graduate Student at The Ohio State University</p>
         </header>
+        
+        <br />
         
         <p> <strong>Lupy</strong>
         <br />
