added avatar again

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -16,11 +16,10 @@
         <br />
        
         <!-- Avatar -->
-        <header>
-            <span class="avatar"><img src="images/pic01.jpg" alt="" /></span>
-            <!-- <h1>Jane Doe</h1> -->
-            <p>Physics Graduate Student at The Ohio State University</p>
-        </header>
+        
+        <p> <span class="avatar"><img src="images/pic01.jpg" alt="" /></span> </p>
+        <!-- <h1>Jane Doe</h1> -->
+        <p>Physics Graduate Student at The Ohio State University</p>
         
         <br />
         
