--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,8 @@
 <header id="header">
 
-					<ul>
+		      <h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
+				<nav id="nav">
+				  <ul>
 						<li><a href="/">About Me</a></li>
                        				<li><a href="/blog.html">Blog</a></li>
 						<!-- <li class="submenu">
