--- a/css/style.css
+++ b/css/style.css
@@ -616,7 +616,7 @@
 	#header {
 		background: transparent;
 		box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.075);
-		color: inherit;
+		color: white;
 		cursor: default;
 		font-size: 0.8em;
 		left: 0;
