--- a/css/style.css
+++ b/css/style.css
@@ -655,7 +655,7 @@
 
 				#header nav ul li a {
 					border: solid 1px transparent;
-					color: inherit;
+					color: white;
 					display: inline-block;
 					line-height: 1em;
 					padding: 0.6em 0.75em;
