--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
 <header id="header">
 
-		      <h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
+		      <!-- <h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1> -->
+			   
 				<nav id="nav">
 				  <ul>
 						<li><a href="/">About Me</a></li>
