--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header id="header">
 
 		      <!-- <h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1> -->
-			   
+			<h1 id="logo"><a href="index.html"> <span> Home <span> </a></h1>
 				<nav id="nav">
-				 <!-- <ul> -->
+				 <ul>
 						<li><a href="/">About Me</a></li>
                        				<li><a href="/blog.html">Blog</a></li>
 						<!-- <li class="submenu">
@@ -26,6 +26,6 @@
 							</ul>
 						</li> -->
 						<li><a href="#" class="button special">email me</a></li>
-					<!-- </ul> -->
+					</ul>
 				</nav>
 			</header>
