--- a/css/style.css
+++ b/css/style.css
@@ -879,11 +879,35 @@
 			#banner .avatar img {
 				display: block;
 				margin: 0 auto;
-				border-radius: 100%;
+				border-radius: 10%;
 				box-shadow: 0 0 0 1.5em #ffffff;
 			}
 
+			#banner .avatar:before {
+				content: '';
+				display: block;
+				position: absolute;
+				top: 50%;
+				left: -3em;
+				width: calc(100% + 6em);
+				height: 1px;
+				z-index: -1;
+				background: #c8cccf;
+			}
 
+			@media screen and (max-width: 480px) {
+
+			#banner {
+				padding: 4em 2em 2.5em 2em ;
+				width: 10%;
+			}
+
+				#banner .avatar:before {
+					left: -2em;
+					width: calc(100% + 4em);
+				}
+
+			}
 
 
 /* Main */
