--- a/css/style.css
+++ b/css/style.css
@@ -879,12 +879,13 @@
 			#banner .avatar img {
 				display: block;
 				margin: 0 auto;
-				border-radius: 10%;
+				border-radius: 100%;
 				box-shadow: 0 0 0 1.5em #ffffff;
 			}
 
 			#banner .avatar:before {
 				content: '';
+				border: transparent;
 				display: block;
 				position: absolute;
 				top: 50%;
@@ -899,7 +900,7 @@
 
 			#banner {
 				padding: 4em 2em 2.5em 2em ;
-				width: 10%;
+				width: 100%;
 			}
 
 				#banner .avatar:before {
