--- a/css/style.css
+++ b/css/style.css
@@ -873,7 +873,7 @@
 			#banner .avatar {
 				position: relative;
 				display: block;
-				margin-bottom: 1.5em;
+				//margin-bottom: 1.5em;
 			}
 
 			#banner .avatar img {
@@ -886,14 +886,17 @@
 			#banner .avatar:before {
 				content: '';
 				border: transparent;
+				border-radius: 100%;
 				display: block;
 				position: absolute;
 				top: 50%;
 				left: -3em;
-				width: calc(100% + 6em);
-				height: 1px;
+				//width: calc(100% + 6em);
+				//height: 1px;
+				width: 50px;
+				height: 50px;
 				z-index: -1;
-				background: #c8cccf;
+				background: #c8cccf; 
 			}
 
 			@media screen and (max-width: 480px) {
@@ -905,7 +908,8 @@
 
 				#banner .avatar:before {
 					left: -2em;
-					width: calc(100% + 4em);
+					\\width: calc(100% + 4em);
+					width: 50px;
 				}
 
 			}
