--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2537,6 +2537,22 @@ input, select, textarea {
 		text-align: center;
 	}
 
+	#banner_R {
+		background-attachment: scroll, scroll, scroll, fixed;
+		background-color: #645862;
+		background-image: url("images/light-bl.svg"), url("images/light-br.svg"), url("../../images/FornaxCluster.jpg");
+		background-position: bottom left, bottom right, top left;
+		background-repeat: no-repeat, no-repeat, repeat;
+		background-size: 25em, 25em, auto;
+		// color: #fff;
+		cursor: default;
+		padding: 6em 0;
+		text-align: center;
+	}
+
+
+
+
 		#banner .inner {
 			-moz-animation: reveal-banner 1s 0.25s ease-in-out;
 			-webkit-animation: reveal-banner 1s 0.25s ease-in-out;
@@ -2638,6 +2654,7 @@ input, select, textarea {
 		background-size: 25em;
 		padding: 7em 0;
 	}
+
 
 		#main > :last-child {
 			margin-bottom: 0;
