--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1979,6 +1979,29 @@ input, select, textarea {
 					background: #df93b8;
 				}
 
+
+				.icon.circle.fa-linkedin {
+					background: #da83ae;
+					color: #fff;
+				}
+
+					.icon.circle.fa-linkedin:hover {
+						background: #df93b8;
+					}
+
+
+				.icon.circle.fa-instagram {
+					background: #db6b67;
+					color: #fff;
+				}
+
+					.icon.circle.fa-instagram:hover {
+						background: #df7b77;
+					}
+
+
+
+
 		.icon.featured {
 			cursor: default;
 			display: block;
